--- a/MidTerm_App05_NotePad/app/src/main/res/menu/list_options_menu.xml
+++ b/MidTerm_App05_NotePad/app/src/main/res/menu/list_options_menu.xml
@@ -1,23 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
     <!--  This is our one standard application action (creating a new note). -->
-    <item android:id="@+id/menu_add"
-          android:icon="@drawable/ic_menu_compose"
-          android:title="@string/menu_add"
-          android:alphabeticShortcut='a'
-          android:showAsAction="always" />
+    <item
+        android:id="@+id/menu_add"
+        android:alphabeticShortcut='a'
+        android:icon="@drawable/ic_menu_compose"
+        android:showAsAction="always"
+        android:title="@string/menu_add" />
+
+    <item
+        android:id="@+id/menu_setting"
+        android:icon="@drawable/ic_settings_black_24dp"
+        android:title="@string/setting"
+
+        />
     <!--  If there is currently data in the clipboard, this adds a PASTE menu item to the menu
           so that the user can paste in the data.. -->
-    <item android:id="@+id/menu_paste"
-          android:icon="@drawable/ic_menu_compose"
-          android:title="@string/menu_paste"
-          android:alphabeticShortcut='p' />
+    <item
+        android:id="@+id/menu_paste"
+        android:alphabeticShortcut='p'
+        android:icon="@drawable/ic_menu_compose"
+        android:title="@string/menu_paste" />
+
 
     <item
         android:id="@+id/menu_search"
+        android:actionViewClass="android.widget.SearchView"
         android:icon="@drawable/ic_search_black_24dp"
         android:showAsAction="always"
-        android:title="@string/search"
-        android:actionViewClass="android.widget.SearchView"/>
+        android:title="@string/search" />
 </menu>
